Category types instead of taxonomy

--- a/Views/Product/Create.cshtml
+++ b/Views/Product/Create.cshtml
@@ -4,7 +4,7 @@
 
 @using (Html.BeginFormAntiForgeryPost(null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
-    @Html.ValidationSummary()
-
     @Display(Model)
+    
+    <input type="submit" class="button primaryAction" name="submit.Create" value="@T("Create")" />
 }
